--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
       <a class="nav-link" [routerLink]="['expedition']" [routerLinkActive]="['active']">Expedition</a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" [routerLink]="['text-formatter']" [routerLinkActive]="['active']">Text Formatter</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" [routerLink]="['database']" [routerLinkActive]="['active']">Database</a>
     </li>
     <li class="nav-item">
