--- a/src/app/expedition-generator/expedition-generator.component.html
+++ b/src/app/expedition-generator/expedition-generator.component.html
@@ -1,18 +1,61 @@
-<div>Newest Patch: {{newestPatch}}.</div>
-<div>Or use your data file:</div>
-<ngx-dropzone (change)="onSelect($event)">
-  <ngx-dropzone-label>{{title}}</ngx-dropzone-label>
-  <ngx-dropzone-preview *ngFor="let f of files">
-    <ngx-dropzone-label>{{ f.name }} ({{ f.type }})</ngx-dropzone-label>
-  </ngx-dropzone-preview>
-</ngx-dropzone>
-{{error}}
-<div class="input-group mt-3">
-  <div class="input-group-prepend">
-    <span class="input-group-text expedition-content">Expedition Content</span>
-  </div>
-  <textarea #expedition class="form-control" aria-label="Expedition Content" [(ngModel)]="expeditionContent"></textarea>
-</div>
-<div class="mt-3">
-  <button type="button" class="btn btn-success" (click)="executeExpedition()" [disabled]="!isCompleted || expeditionContent.length == 0">Excecute</button>
+<div class="expedition-container" *ngIf="expeditionDatabase">
+    <div id="#expedition-scrollpsy" class="expedition-scrollpsy navbar position-fixed">
+        <nav class="nav nav-pills flex-column">
+            <a *ngFor="let archetype of expeditionDatabase;let i = index" class="nav-link" [routerLink]="[]"
+                [fragment]="'archetype_' + i">
+                {{archetype.name}}
+            </a>
+        </nav>
+    </div>
+
+    <div data-bs-spy="scroll" data-bs-target="#expedition-scrollpsy" data-bs-offset="0" tabindex="0">
+        <ng-container *ngFor="let archetype of expeditionDatabase; let i = index">
+            <h4 [id]="'archetype_' + i">{{archetype.name}}</h4>
+            <p>Cohesiveness: {{archetype.cohesiveness}}</p>
+            <p>Offering Rate: {{archetype.offeringRate * 100}}%</p>
+            <p>Wild Pick Bonus: {{archetype.wildPickBonus}}</p>
+            <p>Regions: {{archetype.region}}</p>
+            <p>Cards:</p>
+            <div class="row" *ngIf="archetype.cards.champions">
+                <div class="col-8 offset-md-1">Champions</div>
+                <div class="col-8 offset-md-1">
+                    <ul class="row row-cols-3">
+                        <li class="col" *ngFor="let card of archetype.cards.champions">{{card}}</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row" *ngIf="archetype.cards.followers">
+                <div class="col-8 offset-md-1">Followers</div>
+                <div class="col-8 offset-md-1">
+                    <ul class="row row-cols-3">
+                        <li class="col" *ngFor="let card of archetype.cards.followers">{{card}}</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row" *ngIf="archetype.cards.landmarks">
+                <div class="col-8 offset-md-1">Landmarks</div>
+                <div class="col-8 offset-md-1">
+                    <ul class="row row-cols-3">
+                        <li class="col" *ngFor="let card of archetype.cards.landmarks">{{card}}</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row" *ngIf="archetype.cards.spells">
+                <div class="col-8 offset-md-1">Spells</div>
+                <div class="col-8 offset-md-1">
+                    <ul class="row row-cols-3">
+                        <li class="col" *ngFor="let card of archetype.cards.spells">{{card}}</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row" *ngIf="archetype.cards.unknown">
+                <div class="col-8 offset-md-1">Unknown</div>
+                <div class="col-8 offset-md-1">
+                    <ul class="row row-cols-3">
+                        <li class="col" *ngFor="let card of archetype.cards.unknown">{{card}}</li>
+                    </ul>
+                </div>
+            </div>
+        </ng-container>
+    </div>
 </div>
