--- a/src/app/expedition-generator/expedition-generator.component.scss
+++ b/src/app/expedition-generator/expedition-generator.component.scss
@@ -1,7 +1,7 @@
 .expedition-container {
     position: relative;
 
-    .expedition-scrollpsy {
+    .expedition-scroll {
         right: 5%;
         max-height: 60vh;
         overflow-y: scroll;
