--- a/src/app/database/database.component.html
+++ b/src/app/database/database.component.html
@@ -229,9 +229,9 @@
                             <div class="col-1 d-grid gap-5">
                                 <button class="invisible"></button>
                                 <button class="btn btn-primary gap-2" type="button"
-                                    (click)="selectCardDetail(resultIndex)">Hide</button>
+                                    (click)="selectCardDetail(resultIndex)">Close</button>
                                 <button class="btn btn-secondary" type="button"
-                                    (click)="hideAllCardDetails(resultIndex)">Hide All</button>
+                                    (click)="hideAllCardDetails(resultIndex)">Close All</button>
                             </div>
                         </div>
 
