--- a/src/app/expedition-generator/expedition-generator.component.html
+++ b/src/app/expedition-generator/expedition-generator.component.html
@@ -1,7 +1,23 @@
-<div class="expedition-container" *ngIf="expeditionDatabase">
+<ng-container *ngFor="let eInfo of expeditionInfo">
+    <label class="expedition-label">
+        <input name="options" ng-control="options" type="radio" [value]="eInfo.code" [checked]="eInfo.checked"
+            (change)="changeExpeditionInfo(eInfo)">
+        {{ eInfo.name }}
+    </label>
+</ng-container>
+
+<div class="form-inline">
+    <div class="form-group">
+        <label>Options:</label>
+        <button type="button" class="btn btn-success ms-1" (click)="displayExpedition(selectedExpeditionInfo.name)" [disabled]="!selectedExpeditionInfo.compareable">Display</button>
+        <button *ngIf="selectedExpeditionInfo.compareable" type="button" class="btn btn-success ms-1" (click)="compareExpedition(selectedExpeditionInfo.name)">Compare</button>
+    </div>
+</div>
+
+<div class="expedition-container mt-3" *ngIf="!comparingData && expeditionDatabase[selectedExpeditionInfo.name]">
     <nav id="expedition-scroll" class="expedition-scroll navbar navbar-light bg-light position-fixed">
         <nav class="nav nav-pills flex-column">
-            <a *ngFor="let archetype of expeditionDatabase;let i = index" class="nav-link" [href]="'#archetype_' + i"
+            <a *ngFor="let archetype of expeditionDatabase[selectedExpeditionInfo.name];let i = index" class="nav-link" [href]="'#archetype_' + i"
                 (click)="scrollToElement($event, '#archetype_' + i)">
                 {{archetype.name}}
             </a>
@@ -9,7 +25,7 @@
     </nav>
 
     <div class="expedition-scrollpsy">
-        <ng-container *ngFor="let archetype of expeditionDatabase; let i = index">
+        <ng-container *ngFor="let archetype of expeditionDatabase[selectedExpeditionInfo.name]; let i = index ">
             <h4 [id]="'archetype_' + i">{{archetype.name}}</h4>
             <p>Cohesiveness: {{archetype.cohesiveness}}</p>
             <p>Offering Rate: {{archetype.offeringRate * 100}}%</p>
@@ -58,4 +74,13 @@
             </div>
         </ng-container>
     </div>
+</div>
+
+<div class="comparing-expedtions" *ngIf="comparingData">
+    <ng-container *ngFor="let archetype of comparingData">
+        <h4>{{archetype.name}}</h4>
+        <ul>
+            <li *ngFor="let diff of archetype.diff">{{diff}}</li>
+        </ul>
+    </ng-container>
 </div>
