--- a/src/app/patch-notes-generator/patch-notes-generator.component.scss
+++ b/src/app/patch-notes-generator/patch-notes-generator.component.scss
@@ -16,6 +16,12 @@ table {
 
   .removed-cards {
     img {
+      filter: grayscale(80%);
+    }
+  }
+  
+  .flavor-changed-cards {
+    img {
       opacity: 0.5;
     }
   }
