--- a/src/app/expedition-generator/expedition-generator.component.html
+++ b/src/app/expedition-generator/expedition-generator.component.html
@@ -72,6 +72,7 @@
                     </ul>
                 </div>
             </div>
+            <p>Deck Code: {{archetype.code}}</p>
         </ng-container>
     </div>
 </div>
