--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,9 @@
       <a class="nav-link" [routerLink]="['database']" [routerLinkActive]="['active']">Database</a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" [routerLink]="['utility']" [routerLinkActive]="['active']">Utility</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" [routerLink]="['about']" [routerLinkActive]="['active']">About</a>
     </li>
   </ul>
